--- a/.github/workflows/theme.yml
+++ b/.github/workflows/theme.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }}  >> ~/.ssh/known_hosts
 
-      - name: Restart Node Server
+      - name: Pull Theme
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
